--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        const DATA_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTwaiN2x_68OYELDCAiH6gtuNbP0vLxdOY6QmTsg0zLxHLRGsaFHi_qm2fOfhGajPl6XjDmBJrKoSvx/pub?output=csv";
+        const DATA_URL = "https://script.google.com/macros/s/AKfycbzB488oPQwyo4mAIf13jMFJjbnaWC14AYi4ThQtNmK-lJ3xBPGNF82Yzji1T72rkcg1tA/exec";
     </script>
     <script src="script.js"></script>
 </body>
